/*  $Id: Changelog,v 1.319 2010/08/20 15:33:42 ptsarenko Exp $  */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2010-08-20 18:30 UTC+0300 Pavel Tsarenko (tpe2/at/mail.ru)
  * source/client/leto1.c
    * fixed small incompatibility in OrdKeyVal()

2010-08-20 13:30 UTC+0300 Alexander Kresin (alex/at/belacy.belgorod.su)
  * source/server/letofunc.c
    * Unnecessary code has been removed from leto_Skip()

2010-08-20 13:15 UTC+0300 Alexander Kresin (alex/at/belacy.belgorod.su)
  * source/client/leto1.c
    ! letoOpen() fixed
    * letoOrderListAdd() - leto_ParseRec() is called if the record is returned by server
      for compatibility with previous server versions
  * source/server/letofunc.c
    ! hb_retcAdopt() is replaced by hb_retc_buffer() for compatibility
  * source/server/server.prg
    ! #include hbhrb.ch is removed

2010-08-19 19:40 UTC+0300 Pavel Tsarenko (tpe2/at/mail.ru)
  * include/letocdp.ch
    * removed HB_CODEPAGE_HR437 codepage
  * source/client/leto1.c
    ! fixed letoAppend() for readonly mode
  * source/client/letomgmn.c
  * source/server/letofunc.c
  * source/server/server.prg
    * added parameter check in LETO_CONNECT() function
    + added LETO_ALIAS( nUserStru, cClientAlias ) --> cRealAlias
      function. This function can be used in the UDF function at
      the server side.
    + added LETO_UDF( cSeverFunc, cParam ) --> cResult function.
      This function is called from client application. A string
      <cServerFunc> contains a server connection string and name
      of udf function:
      //ip_address:port/funcname
      A <funcname> function should be defined on the letodb server.
      The first parameter of udf function is nUserStru, the second
      parameter (optional) - character string cParam, received from the
      client. Udf function can return  result (character string) to client.